Fix selectors and text align

--- a/resources/style.css
+++ b/resources/style.css
@@ -13,7 +13,19 @@ h1 {
   text-align: center;
 }
 
-p, a {
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-size: 21px;
+  color: Gray;
+}
+
+.link {
   color: Aquamarine;
   font-size: 16px;
   text-align: center;
